fix: removed processAuthenticationResponse, fixed canHandle, fixed audience derivation, used Nimbus built-in for ECKey, cleaned up utils